# ec8pp

./: CMakeLists.txt  README.md
ec8++/: dialog.c  dialog.cpp  dialog.h  dialog.m  emulator.cpp  emulator.h  file_dialog.c  file_dialog.h  file_dialog.m  graphics.cpp  graphics.h  input.cpp  input.h  main.cpp  openal.h  timers.cpp  timers.h
lib/: doctest.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
tests/: CMakeLists.txt  main.cpp
tests/ec8++/: emulator.cpp  emulator_functions.h
